--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<app.id>clima-1303</app.id>
-		<app.version>44</app.version>
+		<app.version>47</app.version>
 		<appengine.version>1.9.37</appengine.version>
 		<gcloud.plugin.version>2.0.9.74.v20150814</gcloud.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -51,8 +51,29 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.0.6.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+			<artifactId>jersey-test-framework-provider-jetty</artifactId>
+			<version>2.22.2</version>
+		</dependency>
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.data</groupId> -->
+<!-- 			<artifactId>spring-data-jpa</artifactId> -->
+<!-- 			<version>1.10.1.RELEASE</version> -->
+<!-- 		</dependency> -->
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.datanucleus</groupId> -->
+<!-- 			<artifactId>datanucleus-enhancer</artifactId> -->
+<!-- 			<version>3.1.1</version> -->
+<!-- 		</dependency> -->
 
 		<!-- Test Artifacts -->
 		<dependency>
@@ -208,6 +229,9 @@
 				</configuration>
 			</plugin>
 
+
+
+
 			<plugin>
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
@@ -215,9 +239,11 @@
 				<configuration>
 					<enableJarClasses>false</enableJarClasses>
 					<version>${app.version}</version>
+					<port>9090</port>
 					<!-- Comment in the below snippet to bind to all IPs instead of just 
 						localhost -->
-					<!-- address>0.0.0.0</address> <port>8080</port -->
+					<!-- address>0.0.0.0</address -->
+
 					<!-- Comment in the below snippet to enable local debugging with a remote 
 						debugger like those included with Eclipse or IntelliJ -->
 					<!-- jvmFlags> <jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag> 
